--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="p" id="app">
+        <div class="brett" id="app">
         </div>
         <script src="script.js" async defer></script>
     </body>
